Prevent scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 body {
   background-color: #777;
+  overflow: hidden;
 }
 
 #pokemonGuess,
